# shwarii-instant-pay

./: COMPLETE_SETUP_GUIDE.md  COMPLIANCE_CHECKLIST.md  COMPLIANCE_REPORT.md  DEPLOY_PLAYBOOK.sh  FILE_MANIFEST.md  FINAL_CHECKLIST.md  IMPLEMENTATION-PROMPT.md  IMPLEMENTATION_SUMMARY.md  ISSUE_SUMMARY.md  NGROK_SETUP.md  QUICK_REFERENCE.md  QUICK_START_COMPLIANCE.md  QUICK_START_HERE.md  SPEC_COMPLIANCE_MAP.md  SPEC_IMPLEMENTATION_GUIDE.md  SSH-SETUP-TEMPLATE.md  TESTING_REPORT.md  TROUBLESHOOTING.md  USSD-Payment Integration Overview.md  USSD-to-Paystack M-PESA Integration Over.md  USSD_DIAGNOSTICS.md  VERIFICATION_GUIDE.md  deploy.sh  index.html  setup_ngrok.sh  start_ngrok_tunnel.sh  tailwind.config.ts  test_local.sh  ✅ Updated & Professional Rust Implementa.md
src/: index.css
src/components/: CTASection.tsx  FAQSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  PricingSection.tsx  ProblemSection.tsx  SecuritySection.tsx  SolutionSection.tsx  UseCasesSection.tsx
src/components/ui/: button.tsx
src/pages/: Index.tsx
ussd-paystack-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
ussd-paystack-backend/src/: config.rs  main.rs  paystack.rs  ussd.rs
